--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,14 +1,16 @@
 name: example
 description: A new Flutter project.
 version: 1.0.0+1
+publish_to: "none"
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
+
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.5
   swipeable:
     path: ../
 
